--- a/source/less/blocks/button-form.less
+++ b/source/less/blocks/button-form.less
@@ -15,6 +15,7 @@
   text-transform: uppercase;
   color: #ffffff;
   background-color: @blue;
+  border: none;
 }
 
 @media (min-width: @tablet-width) {
