--- a/source/less/blocks/module1.less
+++ b/source/less/blocks/module1.less
@@ -10,10 +10,11 @@
   width: 320px;
   margin-left: auto;
   margin-right: auto;
-  padding: 38px 0.2px 48px;
+  padding: 40px 53px 40px;
   text-align: center;
   color: #000000;
   background-color: #ffffff;
+  box-shadow: 0px 7px 15px 0.1px rgba(0, 1, 1, 0.15);
 }
 
 .module1__wrap1 {
@@ -47,17 +48,11 @@
   padding: 0;
 }
 
-.module1__warning-text2 {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
 .module1__content {
   display: block;
   margin: 0;
   padding: 0;
-  margin-bottom: 10px;
+  margin-bottom: 22px;
   font-size: @little-font;
   line-height: 24px;
   text-align: center;
@@ -66,24 +61,6 @@
 }
 
 .module1__content-text1 {
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-
-.module1__content-text2 {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-.module1__content-text3 {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-.module1__content-text4 {
   display: block;
   margin: 0;
   padding: 0;
@@ -114,10 +91,6 @@
     display: block;
   }
 
-  .module1__warning-text2 {
-    display: block;
-  }
-
   .module1__content {
     display: block;
     width: 277px;
@@ -126,24 +99,6 @@
   }
 
   .module1__content-text1 {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-  }
-
-  .module1__content-text2 {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-  }
-
-  .module1__content-text3 {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-  }
-
-  .module1__content-text4 {
     display: inline-block;
     margin: 0;
     padding: 0;
