--- a/source/less/style.less
+++ b/source/less/style.less
@@ -42,3 +42,4 @@
 @import "blocks/button-module2.less";
 @import "blocks/form-content.less";
 @import "blocks/send-toggle.less";
+@import "blocks/panel.less";
