--- a/source/less/blocks/button-module1.less
+++ b/source/less/blocks/button-module1.less
@@ -13,6 +13,7 @@
   text-transform: uppercase;
   color: #ffffff;
   background-color: @blue;
+  border: none;
 }
 
 @media (min-width: @tablet-width) {
