--- a/source/less/blocks/button-module2.less
+++ b/source/less/blocks/button-module2.less
@@ -12,6 +12,7 @@
   text-transform: uppercase;
   color: #ffffff;
   background-color: @blue;
+  border: none;
 }
 
 @media (min-width: @tablet-width) {
