--- a/source/less/style.less
+++ b/source/less/style.less
@@ -43,3 +43,4 @@
 @import "blocks/form-content.less";
 @import "blocks/send-toggle.less";
 @import "blocks/panel.less";
+@import "blocks/test.less";
