--- a/source/less/blocks/panel.less
+++ b/source/less/blocks/panel.less
@@ -2,155 +2,101 @@
   position: absolute;
   top: 155px;
   left: 0.1px;
-}
-
-.panel__wrap {
-  width: 320px;
-  height: 110px;
   padding: 0.1px 20px 0.1px;
   outline: 1px solid tomato;
 }
 
-.panel__part1 {
-  position: relative;
-  display: block;
+.panel__wrap1 {
   width: 280px;
   height: 45px;
-  background-color: #000000;
-  opacity: 0.3;
-  outline: 1px solid #09e72a;
+  background-color: rgba(1, 1, 1, 0.6);
+  outline: 1px solid rgb(71, 255, 86);
 }
 
-.panel__part1--control::before {
-  content: "";
-  position: absolute;
-  top: 22px;
-  left: 22px;
+.panel__part1 {
+  width: 240px;
+  height: 44px;
+  margin-left: 20px;
+  padding-top: 22px;
+  padding-left: 2px;
+  outline: 1px solid rgb(0, 0, 0);
+}
+
+.panel__volume-level {
+  position: relative;
   display: block;
   width: 235px;
   height: 3px;
-  background-color: #ffffff;
+  background-color: #858585;
+  opacity: 0.6;
 }
 
-.panel__part1--control::after {
+.panel__volume-level--circle::before {
   content: "";
   position: absolute;
-  top: 18px;
-  left: 57px;
-  z-index: 10;
   display: block;
+  top: -3.5px;
+  left: 34px;
   width: 11px;
   height: 11px;
   border-radius: 50%;
   background-color: #ffffff;
+  opacity: 0.98;
 }
 
-.panel__part2 {
-  position: relative;
-  display: block;
+.panel__wrap2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
   width: 280px;
   height: 66px;
+  margin: 0;
+  padding: 0;
   background-color: #f2f2f2;
+  list-style: none;
   outline: 1px solid #0e07d8;
 }
 
-.panel__replay {
-  position: relative;
-  top: 24px;
-  left: 25px;
+.panel__wrap-replay {
   width: 16px;
-  height: 22px;
-  background-repeat: no-repeat;
-  background-image: url(../img/icon-video-replay5c6870.svg);
+  height: 20px;
+  margin-left: 25px;
 }
 
-.panel__replay::before {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 148px;
+.panel__wrap-subtitles {
   width: 32px;
   height: 20px;
-  background-repeat: no-repeat;
-  background-image: url(../img/icon-video-subtitles5c6870.svg);
+  margin-left: 133px;
 }
 
-.panel__replay:after {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 213px;
-  width: 32px;
+.panel__wrap-fullscreen {
+  width: 20px;
   height: 20px;
-  background-repeat: no-repeat;
-  background-image: url(../img/icon-video-fullscreen5c6870.svg);
+  margin-left: 31px;
 }
 
-.panel__replay:hover {
-  position: relative;
-  top: 24px;
-  left: 25px;
-  width: 16px;
-  height: 22px;
-  background-repeat: no-repeat;
-  background-image: url(../img/icon-video-replay333333.svg);
+.panel__replay path,
+.panel__subtitles path,
+.panel__fullscreen path {
+  fill: #5c6870;
 }
 
-.panel__replay:hover::before {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 148px;
-  width: 32px;
-  height: 20px;
-  background-repeat: no-repeat;
-  background-image: url(../img/icon-video-subtitles333333.svg);
+.panel__replay:hover path,
+.panel__subtitles:hover path,
+.panel__fullscreen:hover path {
+  fill: #333333;
 }
 
-.panel__replay:hover:after {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 213px;
-  width: 32px;
-  height: 20px;
-  background-repeat: no-repeat;
-  background-image: url(../img/icon-video-fullscreen333333.svg);
-}
-
-.panel__replay:focus,
-.panel__replay:active {
-  position: relative;
-  top: 24px;
-  left: 25px;
-  width: 16px;
-  height: 22px;
-  background-repeat: no-repeat;
-  background-image: url(../img/icon-video-replay33333303.svg);
-}
-
-.panel__replay:focus::before,
-.panel__replay:active::before {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 148px;
-  width: 32px;
-  height: 20px;
-  background-repeat: no-repeat;
-  background-image: url(../img/icon-video-subtitles33333303.svg);
-}
-
-.panel__replay:focus:after,
-.panel__replay:active:after {
-  content: "";
-  position: absolute;
-  top: 1px;
-  left: 213px;
-  width: 32px;
-  height: 20px;
-  background-repeat: no-repeat;
-  background-image: url(../img/icon-video-fullscreen33333303.svg);
+.panel__replay:active path,
+.panel__subtitles:active path,
+.panel__fullscreen:active path,
+.panel__replay:focus path,
+.panel__subtitles:focus path,
+.panel__fullscreen:focus path {
+  fill: #333333;
+  opacity: 0.3;
 }
 
 @media (min-width: @tablet-width) {
@@ -158,179 +104,67 @@
     position: absolute;
     top: 405px;
     left: 0.1px;
-  }
-
-  .panel__wrap {
-    width: 648px;
-    height: 93px;
     padding: 0.1px 0.1px 0.1px;
     outline: 1px solid tomato;
   }
 
-  .panel__part1 {
-    position: relative;
-    display: block;
-    width: 648px;
-    height: 93px;
-    background-color: #000000;
-    opacity: 0.3;
-    outline: 1px solid #09e72a;
-  }
-
-  .panel__part1--control::before {
-    content: "";
-    position: absolute;
-    top: 45px;
-    left: 93px;
-    display: block;
-    width: 389px;
-    height: 3px;
-    background-color: #ffffff;
-  }
-
-  .panel__part1--control::after {
-    content: "";
-    position: absolute;
-    top: 41px;
-    left: 205px;
-    z-index: 10;
-    display: block;
-    width: 11px;
-    height: 11px;
-    border-radius: 50%;
-    background-color: #ffffff;
-  }
-
-  .panel__part2 {
-    position: relative;
-    display: block;
-    width: 648px;
-    height: 0.1px;
-    background-color: #f2f2f2;
-    outline: 1px solid #0e07d8;
-  }
-
-  .panel__replay {
-    position: relative;
-    top: -57px;
-    left: 33px;
-    z-index: 15;
-    width: 16px;
-    height: 22px;
-    background-repeat: no-repeat;
-    background-image: url(../img/icon-video-replay5c6870.svg);
-  }
-
-  .panel__replay::before {
-    content: "";
-    position: absolute;
-    top: 1px;
-    left: 490px;
-    width: 32px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-image: url(../img/icon-video-subtitles5c6870.svg);
-  }
-
-  .panel__replay:after {
-    content: "";
-    position: absolute;
-    top: 1px;
-    left: 553px;
-    width: 32px;
-    height: 20px;
-    background-repeat: no-repeat;
-    background-image: url(../img/icon-video-fullscreen5c6870.svg);
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .panel {
-    position: absolute;
-    top: 405px;
-    left: 0.1px;
-  }
-
   .panel__wrap {
-    width: 800px;
-    height: 93px;
-    padding: 0.1px 0.1px 0.1px;
-    outline: 1px solid tomato;
-  }
-
-  .panel__part1 {
     position: relative;
-    display: block;
-    width: 800px;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .panel__wrap1 {
+    width: 648px;
     height: 93px;
-    background-color: #000000;
-    opacity: 0.3;
-    outline: 1px solid #09e72a;
+    background-color: rgba(1, 1, 1, 0.01);
+    outline: 1px solid rgb(71, 255, 86);
   }
 
-  .panel__part1--control::before {
-    content: "";
+  .panel__wrap2 {
     position: absolute;
-    top: 45px;
-    left: 93px;
-    display: block;
-    width: 540px;
-    height: 3px;
-    background-color: #ffffff;
-  }
-
-  .panel__part1--control::after {
-    content: "";
-    position: absolute;
-    top: 41px;
-    left: 205px;
+    top: 0.1px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     z-index: 10;
-    display: block;
-    width: 11px;
-    height: 11px;
-    border-radius: 50%;
-    background-color: #ffffff;
-  }
-
-  .panel__part2 {
-    position: relative;
-    display: block;
-    width: 800px;
-    height: 0.1px;
-    background-color: #f2f2f2;
+    justify-content: flex-start;
+    align-items: center;
+    width: 648px;
+    height: 93px;
+    margin: 0;
+    padding: 0;
+    background-color: rgba(1, 1, 1, 0.4);
+    list-style: none;
     outline: 1px solid #0e07d8;
   }
 
-  .panel__replay {
-    position: relative;
-    top: -57px;
-    left: 33px;
-    z-index: 15;
+  .panel__wrap-replay {
     width: 16px;
-    height: 22px;
-    background-repeat: no-repeat;
-    background-image: url(../img/icon-video-replay5c6870.svg);
+    height: 20px;
+    margin-left: 35px;
   }
 
-  .panel__replay::before {
-    content: "";
-    position: absolute;
-    top: 1px;
-    left: 643px;
+  .panel__wrap-subtitles {
     width: 32px;
     height: 20px;
-    background-repeat: no-repeat;
-    background-image: url(../img/icon-video-subtitles5c6870.svg);
+    margin-left: 473px;
   }
 
-  .panel__replay:after {
-    content: "";
-    position: absolute;
-    top: 1px;
-    left: 717px;
-    width: 32px;
+  .panel__wrap-fullscreen {
+    width: 20px;
     height: 20px;
-    background-repeat: no-repeat;
-    background-image: url(../img/icon-video-fullscreen5c6870.svg);
+    margin-left: 31px;
+  }
+
+  .panel__replay path,
+  .panel__subtitles path,
+  .panel__fullscreen {
+    fill: #ffffff;
+  }
+
+  .panel__fullscreen:hover {
+    fill: #ffffff;
+    opacity: 0.6;
   }
 }
