--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -150,10 +150,6 @@
     padding: 0;
   }
 
-  .advantages__meal br {
-    display: none;
-  }
-
   .advantages__title {
     display: block;
     margin: 0;
@@ -171,11 +167,7 @@
     text-align: center;
   }
 
-  .advantages__description br {
-    display: none;
-  }
-
-  .advantages__description1-text {
+  .advantages__description1-text1 {
     display: inline-block;
     margin: 0;
     padding: 0;
@@ -234,8 +226,9 @@
     padding: 0;
   }
 
-  .advantages__description1-text {
+  .advantages__description1-text1 {
     display: block;
+    width: 213px;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -285,9 +278,5 @@
     margin: 0;
     margin-right: 12px;
     padding: 0;
-  }
-
-  .advantages__souvenires br {
-    display: none;
   }
 }
