--- a/source/less/blocks/panel.less
+++ b/source/less/blocks/panel.less
@@ -79,22 +79,22 @@
 
 .panel__replay path,
 .panel__subtitles path,
-.panel__fullscreen path {
+.panel__fullscreen svg {
   fill: #5c6870;
 }
 
 .panel__replay:hover path,
 .panel__subtitles:hover path,
-.panel__fullscreen:hover path {
+.panel__fullscreen:hover svg {
   fill: #333333;
 }
 
 .panel__replay:active path,
 .panel__subtitles:active path,
-.panel__fullscreen:active path,
+.panel__fullscreen:active svg,
 .panel__replay:focus path,
 .panel__subtitles:focus path,
-.panel__fullscreen:focus path {
+.panel__fullscreen:focus svg {
   fill: #333333;
   opacity: 0.3;
 }
@@ -159,11 +159,11 @@
 
   .panel__replay path,
   .panel__subtitles path,
-  .panel__fullscreen {
+  .panel__fullscreen svg {
     fill: #ffffff;
   }
 
-  .panel__fullscreen:hover {
+  .panel__fullscreen svg {
     fill: #ffffff;
     opacity: 0.6;
   }
