--- a/source/less/blocks/photos-head.less
+++ b/source/less/blocks/photos-head.less
@@ -39,6 +39,8 @@
 }
 
 .photos-head__text {
+  width: 270px;
+  margin-left: 25px;
   margin-bottom: 22px;
   font-size: @little-font;
   line-height: 26px;
@@ -77,11 +79,6 @@
     font-size: 30px;
     margin-top: 55px;
     margin-bottom: 20px;
-  }
-
-  .photos-head__text br {
-    display: none;
-    width: 428px;
   }
 
   .photos-head__text {
