--- a/source/less/blocks/realtown.less
+++ b/source/less/blocks/realtown.less
@@ -54,10 +54,11 @@
 
 .realtown__recomendation {
   display: block;
+  width: 268px;
   padding: 0;
   margin: 0;
+  margin-left: 30px;
   padding-top: 15px;
-  margin-right: 10px;
   font-size: @little-font;
   font-weight: 400;
   line-height: 21px;
@@ -94,12 +95,9 @@
     font-size: @large-font;
   }
 
-  .realtown__recomendation br {
-    display: none;
-  }
-
   .realtown__recomendation {
     margin: 0;
+    padding: 0;
     padding-top: 22px;
   }
 
