--- a/source/less/blocks/reasons.less
+++ b/source/less/blocks/reasons.less
@@ -40,6 +40,7 @@
 
 .reasons__number-zero {
   display: inline-block;
+  width: 270px;
   padding-top: 22px;
   padding-left: 30px;
   font-size: @medium-font;
@@ -102,10 +103,6 @@
     flex-direction: column;
   }
 
-  .reasons__position br {
-    display: none;
-  }
-
   .reasons__number-zero {
     width: 490px;
     margin: 52px auto;
@@ -117,6 +114,7 @@
   }
 
   .reasons__number-one {
+    width: 493px;
     padding: 0;
     margin: 0 auto 51px;
     padding-top: 10px;
